--- a/standard-multilang.html
+++ b/standard-multilang.html
@@ -13,10 +13,7 @@
     </style>
 </head>
 <body>
-<div>
-    <span class="lang_switch" lang="en">English</span> |
-    <span class="lang_switch" lang="sv">Swedish</span>
-</div>
+<div class="language_switch"></div>
 <ul class="nav">
     <li><a href="#" mulang="amount['<b>10</b>','USD']">en text</a></li>
     <li><a href="#" mulang="intro">en annan text</a></li>
@@ -31,25 +28,31 @@
         <input mulang="card_type_placeholder:placeholder;card_type:value" />
     </li>
 </ul>
-<script>
-    function initMulang(lang){
-        var options = {
-            ignore_locale: true,
-            fallback: 'fi'
-        };
-        if(lang){
-            options.lang = lang
-        }
-        $('[mulang]').mulang(options); // apply for all elements with mulang attribute
-    }
 
-    $( document ).ready(function() {
-        initMulang();
-        $('.lang_switch').on('click',function(){
-            lang = $(this).attr('lang');
-            initMulang(lang);
-        });
+<script>
+$( document ).ready(function() {
+    var options = {
+        lang: 'ru', //what language to use
+        fallback: 'en', //if lang is not found in file, fall back to this
+        ignore_locale: true //when grabbing the language from the browser (en-US) ignore the locale (US) 
+    };
+    var lang_set = $('[mulang]').mulang(options);
+
+    //add select with language options
+    if(window.__mulang && __mulang.languages) {
+        $('.language_switch').append('<select></select>');
+        for (let lang of __mulang.languages) {
+            $('.language_switch select').append('<option value="'+lang.code+'">'+lang.name+'</option>');
+        }
+    }
+    $('.language_switch select').val(lang_set);
+
+    //changing language
+    $('.language_switch select').on('change', function() {
+        options.lang = this.value;
+        $('[mulang]').mulang(options);
     });
+})
 </script>
 </body>
 </html>
